[gd_scene load_steps=16 format=3 uid="uid://blasv8il4wied"]

[ext_resource type="Texture2D" uid="uid://bilnrphsksbqq" path="res://assets/kenney_tiny-town/Tiles/tile_0105.png" id="1_q1eox"]
[ext_resource type="Shader" path="res://shaders/haunt-outline.gdshader" id="1_xldbk"]
[ext_resource type="Texture2D" uid="uid://fn7hcj6iq0jh" path="res://shaders/color_gradient_texture_1d.tres" id="2_jeupj"]
[ext_resource type="Texture2D" uid="uid://caqsdsty08tfr" path="res://shaders/vertical_gradient_texture_1d.tres" id="3_d410g"]
[ext_resource type="PackedScene" uid="uid://265bu6cxmm3h" path="res://components/throw_component.tscn" id="3_ln1o8"]
[ext_resource type="PackedScene" uid="uid://1m2umsuy8oo5" path="res://triggers/trigger.tscn" id="4_vsnvl"]
[ext_resource type="Script" path="res://environment/bomb.gd" id="5_ew0h0"]
[ext_resource type="PackedScene" uid="uid://bkitg7eigb4o" path="res://components/hauntable_component.tscn" id="8_cna1f"]
[ext_resource type="PackedScene" uid="uid://d3fmdqfvs6a22" path="res://haunt/signal.tscn" id="9_7uf1n"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wshau"]
shader = ExtResource("1_xldbk")
shader_parameter/size_effect = 12.0
shader_parameter/speed = 1.2
shader_parameter/highlight_strength = 0.5
shader_parameter/color_mode_toggle = true
shader_parameter/is_horizontal = false
shader_parameter/pause_duration = 0.2
shader_parameter/texture_size = Vector2(16, 16)
shader_parameter/onoff = false
shader_parameter/vertical_gradient = ExtResource("3_d410g")
shader_parameter/color_gradient = ExtResource("2_jeupj")

[sub_resource type="GDScript" id="GDScript_r8oyb"]
script/source = "extends Trigger


var dialogue = preload(\"res://globals/dialogue/general.dialogue\")

func trigger_effect(target):
	print(\"bomb triggered\")
	var direction = get_parent().global_position - target.global_position
	if target.has_method(\"play_idle\"):
		target.play_idle(direction)
	DialogueManager.dialogue_ended.connect(func(_res): throw(direction), CONNECT_ONE_SHOT)
	DialogueManager.show_dialogue_balloon(dialogue, \"bomb\")

func throw(direction):
	await get_parent().throw(direction)
	await get_parent().hit
	complete.emit.call_deferred()
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7yecc"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="Animation_pbfvx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_81avc"]
resource_name = "pick_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -5), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jqvqw"]
_data = {
"RESET": SubResource("Animation_pbfvx"),
"pick_up": SubResource("Animation_81avc")
}

[node name="Bomb" type="Sprite2D"]
material = SubResource("ShaderMaterial_wshau")
texture = ExtResource("1_q1eox")
script = ExtResource("5_ew0h0")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ThrowComponent" parent="." node_paths=PackedStringArray("self_node") instance=ExtResource("3_ln1o8")]
self_node = NodePath("..")
speed_multiplier = 2.0

[node name="Trigger" parent="." instance=ExtResource("4_vsnvl")]
position = Vector2(0, 16)
script = SubResource("GDScript_r8oyb")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Trigger"]
position = Vector2(16, -16)
shape = SubResource("RectangleShape2D_7yecc")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Trigger"]
position = Vector2(0, -32)
shape = SubResource("RectangleShape2D_7yecc")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Trigger"]
position = Vector2(-16, -16)
shape = SubResource("RectangleShape2D_7yecc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jqvqw")
}
speed_scale = 4.0

[node name="HauntableComponent" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("8_cna1f")]
sprite = NodePath("..")

[node name="Move" parent="HauntableComponent/HauntUI/Options" index="0" node_paths=PackedStringArray("haunt_target")]
haunt_target = NodePath("../../../..")

[node name="Signal" parent="HauntableComponent/HauntUI/Options" index="1" node_paths=PackedStringArray("haunt_target") instance=ExtResource("9_7uf1n")]
layout_mode = 2
haunt_target = NodePath("../../../..")

[node name="Button" parent="HauntableComponent/HauntUI/Options/Signal" index="0"]
text = "Disarm"

[connection signal="hit" from="ThrowComponent" to="." method="_on_hit"]
[connection signal="haunt_selected" from="HauntableComponent/HauntUI/Options/Signal" to="." method="_on_signal_haunt_selected"]

[editable path="Trigger"]
[editable path="HauntableComponent"]
[editable path="HauntableComponent/HauntUI"]
[editable path="HauntableComponent/HauntUI/Options/Signal"]
